Add comprehensive test coverage for OpenTelemetry context extractors, including API Gateway, DynamoDB, Kinesis, and SNS; update `pom.xml` to include Mockito dependencies.